IVYPORTAL-8577 Needed features for release 8.0 II: + Fixed calendar style in IE + Fixed responsiveness of task, case list for expanded/collapsed left menu

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -3292,7 +3292,7 @@ _:-ms-input-placeholder, :root .line-process-chain .line-horizontal-process-step
 }
 
 .absence-panel-grid > div {
-  padding: 12px 0;
+  padding: 15px 0;
 }
 
 .absences-table-action-column-icon-button {
